# lfreqnki

./: README.md  pyproject.toml
data/: wordfreq_top1000.json  wordfreq_top1000_withfreq.json
scripts/: gen_wfreq.py
