[tool.poetry]
name = "lfreqnki"
version = "0.1.0"
description = ""
authors = ["Evan Lesmez <evan.lesmez@compassionplanet.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
openai = "^0.26.5"
wordfreq = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
